--- a/README.org
+++ b/README.org
@@ -40,6 +40,7 @@ Rate Limit and Throttle WAI Requests
      }
      #+END_SRC
    - [ ] Zoned throttling
+     * multiple zones
      #+BEGIN_SRC
      http {
        limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s;
